fix: enc.example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 VITE_DOCYRUS_TENANT_ID=your_docyrus_tenant_id
 VITE_DOCYRUS_SUPABASE_URL=your_supabase_project_url
 VITE_DOCYRUS_SUPABASE_ANON_KEY=your_supabase_anon_key
+VITE_DOCYRUS_API_URL=your_docyrus_api_url
