packages updated to their latest versions

--- a/package.json
+++ b/package.json
@@ -11,39 +11,41 @@
     "lint": "eslint",
     "format": "prettier",
     "check": "prettier --write . && eslint --fix",
-    "generate-openapi-spec": "curl -o openapi.json https://api.docyrus.app/storage/v1/object/public/tenant-public/${DOCYRUS_TENANT_ID}/openapi.json",
+    "generate-openapi-spec": "curl -o openapi.json https://api.docyrus.app/storage/v1/object/public/tenant-public/${VITE_DOCYRUS_TENANT_ID}/openapi.json",
     "generate-orm": "npx tanstack-db-generator openapi.json"
   },
   "dependencies": {
-    "@docyrus/tanstack-db-generator": "^0.0.2",
+    "@docyrus/tanstack-db-generator": "^0.0.8",
+    "@docyrus/api-client": "^0.0.2",
+    "@docyrus/logo-asset-generator": "^0.0.1",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@supabase/supabase-js": "^2.53.0",
-    "@tailwindcss/vite": "^4.0.6",
-    "@tanstack/react-query": "^5.66.5",
-    "@tanstack/react-router": "^1.121.2",
+    "@supabase/supabase-js": "^2.56.0",
+    "@tailwindcss/vite": "^4.1.12",
+    "@tanstack/react-query": "^5.85.5",
+    "@tanstack/react-router": "^1.131.28",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.476.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.6",
+    "lucide-react": "^0.542.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.12",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@tanstack/eslint-config": "^0.1.0",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/react": "^16.2.0",
-    "@types/node": "^24.2.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
-    "jsdom": "^26.0.0",
-    "prettier": "^3.5.3",
-    "typescript": "^5.7.2",
-    "vite": "^6.1.0",
-    "vitest": "^3.0.5",
-    "web-vitals": "^4.2.4"
+    "@tanstack/eslint-config": "^0.3.1",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/node": "^24.3.0",
+    "@types/react": "^19.1.11",
+    "@types/react-dom": "^19.1.8",
+    "@vitejs/plugin-react": "^5.0.1",
+    "jsdom": "^26.1.0",
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.2",
+    "vite": "^7.1.3",
+    "vitest": "^3.2.4",
+    "web-vitals": "^5.1.0"
   }
 }
